# factorio-isr

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CONSOLIDATION_HANDOFF.md  CONSOLIDATION_SUMMARY.md  DEPENDENCY_INJECTION_DELIVERY.md  DEPLOYMENT_V7_0_METRICS_ENGINE.md  DI_DELIVERY_MANIFEST.txt  DI_QUICKSTART.md  Dockerfile  ENHANCED_TESTS_QUICKSTART.md  ENHANCEMENT_SUMMARY.md  FACTORIO_IMPORT_COVERAGE_100_PERCENT.md  FIXES_COMMITTED.md  HANDLER_LOGGING_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION_GUIDE.md  PHASE_2_READY.md  PHASE_3_DEPLOYMENT_SUMMARY.md  PHASE_3_INTEGRATION_ALL_14.md  PHASE_3_STRATEGY.md  PHASE_4_COMPLETE_FINAL.md  PHASE_7_CHECKLIST.md  PHASE_COMPLETION_REPORT.md  QUICK_INTEGRATION.md  README.md  REFACTORING_GUIDE.md  REFACTORING_STATUS.md  TESTING_DIAGNOSTICS.md  TEST_CONSOLIDATION_ACTION_PLAN.md  TEST_CONSOLIDATION_COMPLETE.md  TEST_SUITE_ENHANCEMENT_REPORT.md  bps.sh  build.sh  codecov.yml  coverage.xml  docker-compose.yml  docker-compose.yml.example  (+8 more)
.arch/: Changelog.md  IP_REDACTION_SUMMARY.md  RESEARCH_COMMAND_IMPLEMENTATION.md
.deprecated/: test_log_tailer.old
.secrets/: DISCORD_WEBHOOK_URL.txt  RCON_PASSWORD.txt
config/: mentions.yml  secmon.yml  servers.yml  servers.yml.example
docs/: ARCHITECTURE.md  ARCHITECTURE_METRICS_ENGINE.md  CLA.md  CLOCK_COMMAND_IMPLEMENTATION.md  COVERAGE_IMPROVEMENT_REPORT.md  Changelog.md  DEPENDENCY_INJECTION_POC.md  DEPLOYMENT.md  DI_COMMIT_SUMMARY.md  DI_vs_COMMAND_PATTERN.md  EXAMPLES.md  Gemfile  HEALTH_OTEL_REFERENCE.md  LICENSE-COMMERCIAL.md  LICENSING.md  MULTI_CHANNEL.md  (+28 more)
(+155 files in other folders)
