[project]
name = "factorio-isr"
version = "1.0.0"
requires-python = "==3.14"
# No dependencies here - using requirements.txt for prod

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black==24.10.0",# Code formatting
    "ruff==0.8.4",# Fast linting
    "mypy==1.13.0"   # Type checking
    "watchdog>=6.0.0"
    "python-json-logger>=3.2.1"
    "aiohttp-cors>=0.7.0  # CORS support"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Test markers
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "unit: marks tests as unit tests (no external dependencies)",
]

# Coverage options
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-branch",
    "-v"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylance]
typeCheckingMode = "basic"
extraPaths = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*"
]




